2025-02-10T01:43:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13231874871 # 561
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-10
* notice: last 14d: unq all: 16 27
* notice: prev accum: outdated-unq outdated-all / unq all: 883 1358 / 904 1384
* notice: next accum: outdated-unq outdated-all / unq all: 883 1358 / 905 1385
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-09]

2025-02-09T01:46:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13221221317 # 560
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-09
* notice: last 14d: unq all: 16 26
* notice: prev accum: outdated-unq outdated-all / unq all: 882 1357 / 904 1384
* notice: next accum: outdated-unq outdated-all / unq all: 883 1358 / 904 1384
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-26] / []

2025-02-08T01:39:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13211020080 # 559
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-08
* notice: last 14d: unq all: 16 27
* notice: prev accum: outdated-unq outdated-all / unq all: 882 1357 / 903 1383
* notice: next accum: outdated-unq outdated-all / unq all: 882 1357 / 904 1384
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-07]

2025-02-07T01:42:51Z: